--- a/тест/index.html
+++ b/тест/index.html
@@ -82,6 +82,7 @@
 
   <div class="container">
     <section id="services">
+      <img src="https://ar.inspiredpencil.com/pictures-2023/beauty-salon-poster-design">
       <h2>Наши услуги</h2>
       <p>Мы предлагаем широкий спектр услуг: парикмахерские услуги, маникюр и педикюр, уход за лицом и телом, спа-процедуры и многое другое.</p>
     </section>
@@ -95,9 +96,9 @@
   </div>
 
   <footer>
-    <!-- Elfsight Back to Top -->
-    <script src="https://elfsightcdn.com/platform.js" async></script>
-    <div class="elfsight-app-b02726e0-b391-4e9c-bb57-6c0863005be2" data-elfsight-app-lazy></div>
+<!-- Elfsight Back to Top | Untitled Back to Top -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-20bcce64-63f8-4c46-89ce-3601c4a75e8f" data-elfsight-app-lazy></div>
   </footer>
 </div>
 
