--- a/тест/index.html
+++ b/тест/index.html
@@ -89,18 +89,15 @@
     <section id="news">
       <h2>Новости</h2>
       <p><em>15 сентября:</em> Открытие нового зала для спа-процедур с современным оборудованием.</p>
-            <img src="https://ar.inspiredpencil.com/pictures-2023/beauty-salon-poster-design">
       <p><em>1 октября:</em> Скидка 20% на окрашивание волос для новых клиентов.</p>
-            <img src="https://ar.inspiredpencil.com/pictures-2023/beauty-salon-poster-design">
       <p><em>10 октября:</em> Бесплатная консультация косметолога при записи на процедуру ухода за лицом.</p>
-            <img src="https://ar.inspiredpencil.com/pictures-2023/beauty-salon-poster-design">
     </section>
   </div>
 
   <footer>
-<!-- Elfsight Back to Top | Untitled Back to Top -->
+<!-- Elfsight Back to Top | Back to Top (WIDGETS-4109) -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-20bcce64-63f8-4c46-89ce-3601c4a75e8f" data-elfsight-app-lazy></div>
+<div class="elfsight-app-abd26229-450b-42b5-b86f-4596d3fb0864" data-elfsight-app-lazy></div>
   </footer>
 </div>
 
