--- a/тест/index.html
+++ b/тест/index.html
@@ -94,6 +94,30 @@
     </section>
   </div>
 
+      <section id="news">
+      <h2>Новости 2</h2>
+      <p><em>15 сентября:</em> Открытие нового зала для спа-процедур с современным оборудованием.</p>
+      <p><em>1 октября:</em> Скидка 20% на окрашивание волос для новых клиентов.</p>
+      <p><em>10 октября:</em> Бесплатная консультация косметолога при записи на процедуру ухода за лицом.</p>
+    </section>
+  </div>
+
+      <section id="news">
+      <h2>Новости 3</h2>
+      <p><em>15 сентября:</em> Открытие нового зала для спа-процедур с современным оборудованием.</p>
+      <p><em>1 октября:</em> Скидка 20% на окрашивание волос для новых клиентов.</p>
+      <p><em>10 октября:</em> Бесплатная консультация косметолога при записи на процедуру ухода за лицом.</p>
+    </section>
+  </div>
+
+    <section id="news">
+      <h2>Новости 4</h2>
+      <p><em>15 сентября:</em> Открытие нового зала для спа-процедур с современным оборудованием.</p>
+      <p><em>1 октября:</em> Скидка 20% на окрашивание волос для новых клиентов.</p>
+      <p><em>10 октября:</em> Бесплатная консультация косметолога при записи на процедуру ухода за лицом.</p>
+    </section>
+  </div>
+  
   <footer>
 <!-- Elfsight Back to Top | Back to Top (WIDGETS-4109) -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
