--- a/тест/index.html
+++ b/тест/index.html
@@ -134,7 +134,9 @@
     }, 1500); // задержка 1.5 сек для демонстрации лоадера
   });
 </script>
-
+<!-- Elfsight Accessibility | Accessibility (PROD) -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-8419669c-ef7e-403a-88bf-591376095399" data-elfsight-app-lazy></div>
 </body>
 </html>
 
