--- a/тест/index.html
+++ b/тест/index.html
@@ -143,7 +143,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
           <h2>Видео:</h2>
         <video>
-  <source src="https://www.youtube.com/watch?v=PRv0bQN-rn4" type="video/mp4"/>
+  <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4"/>
 </video>
   <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
   <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
