--- a/тест/index.html
+++ b/тест/index.html
@@ -141,10 +141,9 @@ and is wrapped around the whole page content, except for the footer in this exam
 
 <!-- Footer -->
 <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
-          <h2>Видео:</h2>
-        <video controls width="400">
-  <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4"/>
-</video>
+<!-- Elfsight Event Calendar | Event Calendar (WIDGETS-4096) -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-a747c57d-bb81-4723-a78e-c7c5a8617cef" data-elfsight-app-lazy></div>
   <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
   <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
