--- a/тест/index.html
+++ b/тест/index.html
@@ -141,9 +141,9 @@ and is wrapped around the whole page content, except for the footer in this exam
 
 <!-- Footer -->
 <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
-<!-- Elfsight Form Builder | Form Builder (WIDGETS-4160) -->
+<!-- Elfsight Contact Form | Untitled Contact Form 11 -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-0ace9e7e-ccd5-471a-aa86-2729dfb25fc4" data-elfsight-app-lazy></div>
+<div class="elfsight-app-805d2044-012f-4dda-a46a-cb7ccb575615" data-elfsight-app-lazy></div>
   
   <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
   <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
