--- a/тест/index.html
+++ b/тест/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-  <!-- Elfsight Slider | Slider: ARIA (WIDGETS-4111) -->
+<!-- Elfsight Audio Player | AP: prod -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-c2ecd1aa-eec4-436f-aec1-1ad1ef0bbae1" data-elfsight-app-lazy></div>
+<div class="elfsight-app-00cdbd91-a0fe-430f-890d-e79eed50dff6" data-elfsight-app-lazy></div>
 
 </body>
 </html>
